<resources>
    <string name="app_name">Buxa</string>
    <string name="sharedPrefrence">in.alchemistdigital.buxa</string>
    <string name="boolean_login_sharedPref">boolLoginPreference</string>
    <string name="loginId">loginId</string>
    <string name="loginName">loginName</string>
    <string name="loginEmail">loginEmail</string>
    <string name="companyName">companyName</string>
    <string name="apikey">apikey</string>
    <string name="FCM_RegId">FCM_RegId</string>
    <string name="str_loading">Loading</string>
    <string name="str_welcome">Welcome to</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="strICEcodeQty">Do you have an IEC Code?</string>
    <string name="strSelectService">Please select the</string>
    <string name="strServices">services</string>
    <string name="strWantAvail">you want to avail.</string>
    <string name="strTransportation">Transportation</string>
    <string name="strCustomClr">Custom clearance</string>
    <string name="freightForward">Freight forwarding</string>
    <string name="btn_login">LOG IN</string>
    <string name="forgetPwd">Forgotten password?</string>
    <string name="btn_new_user">create new BUXA Account</string>
    <string name="strCompanyRegisterDetails">Company Registration Details</string>
    <string name="strIndia">India</string>
    <string name="str_spinner_state">State</string>
    <string name="codeString">BUXA%1$s%2$d</string>
    <string name="strNoConnection">No internet connection!</string>
    <string name="strLcl">LCL</string>
    <string name="strFcl">FCL</string>
    <string name="strPartLoad">Part Load</string>
    <string name="strFullLoad">Full Load</string>
    <string name="strTruckLoad">Truck Load</string>
    <string name="strGpsName">GPS</string>
    <string name="strManualName">Manual</string>
    <string name="btn_signIn">Sign in</string>
    <string name="strSelectedImage">selectedImage</string>
    <!--<string name="strInTransportMode">Do you avail with %1$s</string>-->
    <string name="str20feet">20\'</string>
    <string name="str40feet">40\'</string>
    <string name="str40HQfeet">40\' HQ</string>
    <string name="strFactoryStuff">Factory stuffing</string>
    <string name="strDockStuff">Dock stuffing</string>
    <string name="strStartButtom">let\'s start</string>
    <string name="next">Next</string>
    <string name="company_name">Company\u0020:\u0020\u0020</string>
    <string name="client">Dear Mr / Mrs.\u0020</string>
    <string name="strDate">Date\u0020:\u0020\u0020</string>
    <string name="strBookNo">Booking no\u0020:\u0020\u0020</string>
    <string name="str_quote_content">
        We are greatly privileged to be given this chance to quote for your company. According to
        your requirement, we came up with a proposal that is appropriate for your needs.
    </string>
    <string name="str_quote_footer">For further question, please feel free to contact us.</string>
    <string name="str_thanking_toast">Thank you for your interest in enquiry, Our Team will revert
        within 03 hours with our best quote for your consideration and confirmation.</string>
    <string name="empty_enquiry_message">No new enquiry found.</string>
    <string name="strCompanyContactPerson">Contact Person User Details</string>
    <string name="strExport">Export</string>
    <string name="strImport">Import</string>
    <string name="buxaAddress">Vaishnav Villa Co-op. Hsg. Soc. Ltd.\nRow House No 7-B, 1st Floor.\nadjacent to The Living Room\nThakur Complex, Kandivali (East), Mumbai 400101.</string>
    <string name="buxaEmail">amruta@buxa.tech</string>
    <string name="buxaContact">+91 7738333539</string>
    <string name="title_activity_feedback" translatable="false">Feedback</string>
    <string name="str_trans">Transportation</string>
    <string name="str_cc">Custom Clr</string>
    <string name="str_ff">Freight Fwd</string>
    <string name="strCCType">Custom Clr Type</string>
    <string name="strBookStatus">Status</string>
    <string name="strBookingQuotation">Quotation</string>
    <string name="strBookingRates">Rates</string>
    <string name="Rs">\u20B9</string>
    <string name="strAccept">Accept</string>
    <string name="strCancel">Cancel</string>
    <string name="runBefore">RunBefore</string>
    <string name="strOTPTest">OTP is sent on</string>
    <string name="strconform">Confirm</string>
    <string name="international">International</string>
    <string name="domestic">Domestic</string>

    <!-- ++++++++++++++++++++++++++ GCM ++++++++++++++++++++++ -->
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>

    <string name="dap">Delivered at Place (DAP)</string>
    <string name="ddp">Delivered Duty Paid (DDP)</string>
    <string-array name="incoterms">
        <item>Ex. Works (EXW)</item>
        <item>Free Carrier (FCA)</item>
        <item>Carriage Paid To (CPT)</item>
        <item>Carriage &amp; Insurance Paid To (CIP)</item>
        <item>Delivered at Terminal (DAT)</item>
        <item>@string/dap</item>
        <item>@string/ddp</item>
        <item>Free Alongside Ship (FAS)</item>
        <item>Free On Board (FOB)</item>
        <item>Cost &amp; Freight (CFR)</item>
        <item>Cost, Insurance &amp; Freight (CIF)</item>
    </string-array>

    <string-array name="loadingPort">
        <item>Nhava Sheva, Navi Mumbai, Maharashtra 400702</item>
        <item>Samundra Township, Mundra, Gujarat 370405</item>
    </string-array>

    <string-array name="state">
        <item>Karnataka</item>
        <item>Andhra Pradesh</item>
        <item>Tamilnadu</item>
        <item>Maharashtra</item>
        <item>Goa</item>
        <item>Kerala</item>
        <item>Gujarat</item>
        <item>Assam</item>
        <item>Arunachal Pradesh</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu &amp; Kashmir</item>
        <item>Jharkhand</item>
        <item>Madhya Pradesh</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Lakshadweep</item>
        <item>Delhi</item>
        <item>Pondicherry</item>
    </string-array>

    <string-array name="vehicle_type">
        <item>Light Commercial Vehicle (LCV)</item>
        <item>LPT</item>
        <item>Full Truck Load (FTL)</item>
        <item>Taurus</item>
        <item>20 ft Open Truck</item>
        <item>20 ft Trailer</item>
        <item>40 ft Trailer (double Axel)</item>
        <item>40 ft Trailer (Triple Axel)</item>
        <item>Semi Low Bed Trailer</item>
        <item>Low Bed Trailer</item>
        <item>Multi Axel Trailer (Hydraulic)</item>
    </string-array>

    <string-array name="vehicle_capacity">
        <item>3.50</item>
        <item>5.50</item>
        <item>9.00</item>
        <item>16.00</item>
        <item>9.00</item>
        <item>20.00</item>
        <item>22.00</item>
        <item>27.00</item>
        <item>22.00</item>
        <item>22.00</item>
        <item>per Axel 7 MT</item>
    </string-array>

    <!--hints-->
    <string name="hint_commodity">Commodity</string>
    <string name="hint_type_of_package">Type of Package</string>
    <string name="hint_no_of_package">No of Packages</string>
    <string name="hint_type_of_shipment">Type of Shipment</string>
    <string name="hint_dimensions">Cargo Dimensions (mm)</string>
    <string name="hint_pickUp_location">Pickup Location</string>
    <string name="hint_drop_location">Drop Location</string>
    <string name="hint_custom_clearance">Custom Clearance Location</string>
    <string name="hint_first_time_custom_clearance">Are you first time into custom clearance ?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_company_name">Company name</string>
    <string name="hint_company_code">Code</string>
    <string name="hint_company_address">Address</string>
    <string name="hint_company_landmark">Landmark</string>
    <string name="hint_company_city">City</string>
    <string name="hint_company_zipcode">Zipcode</string>
    <string name="hint_company_pan">PAN</string>
    <string name="hint_company_tin">TIN</string>
    <string name="hint_contact_name">Contact name</string>
    <string name="hint_contact_mobile">Mobile</string>
    <string name="hint_contact_email">Email id</string>
    <string name="hint_company_contact_email">Company Email id</string>
    <string name="hint_contact_pwd">Password</string>
    <string name="hint_contact_confirm_pwd">Confirm password</string>
    <string name="hint_dimensions_length">length</string>
    <string name="hint_dimensions_height">height</string>
    <string name="hint_dimensions_width">width</string>
    <string name="hint_IEC_number">IEC number</string>
    <string name="hint_AD_Code">AD code registration</string>
    <string name="hint_cubic_meter_measurement">Cubic meter measurement</string>
    <string name="hint_gross_weight">Gross weight</string>
    <string name="hint_CC_address">Address</string>
    <string name="hint_pol_address">Port Of Loading</string>
    <string name="hint_pod_address">Port of Destination</string>
    <string name="hint_vehicle_type">Types of Vehicles</string>
    <string name="hint_bookId">Booking id</string>
    <string name="hint_capacity">Capacity (MT)</string>
    <string name="hint_cfs_address">Container freight station</string>
    <string name="hint_incoterm">INCOTERMS</string>
    <string name="hint_hs_code">Harmonized System Code</string>
    <string name="hint_local_address">Local location address</string>
    <string name="hint_destination_delivery_adr" translatable="false">Destination delivery address</string>
    <string name="hint_poc">Port  of country</string>
    <string name="hint_landmark">Landmark</string>
    <string name="hint_pincode">Pincode</string>
    <string name="hint_pickup_landmark">Pickup landmark</string>
    <string name="hint_drop_landmark">Drop landmark</string>
    <string name="hint_feedback">Give your reviews about app</string>
    <string name="hint_stuffing_address">Stuffing address</string>
    <string name="hint_stuffing_type">Stuffing type</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="buxaWebsite">www.buxa.tech</string>

</resources>
