<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".activities.SplashScreen">

    <LinearLayout
        android:id="@+id/id_noInternet_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:background="@color/error">
        <com.alchemistdigital.buxa.utilities.SegoeRegularFontCustomTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/strNoConnection"
            android:textColor="@color/milkyWhite"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/id_buxaLogo_splashscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/buxa_logo_loginscreen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <RelativeLayout
        android:id="@+id/layout_loginPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_buxaLogo_splashscreen"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.alchemistdigital.buxa.utilities.EdittextSegoeLightFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/login_email"
                android:hint="@string/hint_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_login_email">
            <com.alchemistdigital.buxa.utilities.EdittextSegoeLightFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/login_password"
                android:hint="@string/hint_password"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/input_layout_login_password">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroundColor"
                android:text="@string/btn_login"
                android:textColor="@android:color/white"
                android:onClick="doLogging"/>
        </LinearLayout>

        <com.alchemistdigital.buxa.utilities.SegoeRegularFontCustomTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_btnLogin"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/mdtp_ampm_text_color"
            android:textSize="15dp"
            android:text="@string/forgetPwd"/>

        <Button
            android:id="@+id/btn_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_new_user"
            android:textColor="@color/backgroundColor"
            android:background="@drawable/blueborder_bgtransparent"
            android:onClick="goToRegisterPage"/>
    </RelativeLayout>

</RelativeLayout>
