<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.alchemistdigital.buxa.utilities.SegoeFontTextView
                android:id="@+id/enquiry_row_bookigid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strBookNo"
                android:textSize="@dimen/enquiries_bookingid_textSize"
                app:Segoe="segoe_regular"
                android:textColor="@color/colorPrimaryDark"/>

            <com.alchemistdigital.buxa.utilities.SegoeFontTextView
                android:id="@+id/enquiry_row_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/strDate"
                android:textSize="@dimen/enquiries_date_textSize"
                app:Segoe="segoe_light"
                android:textColor="@color/enquiry_date_color"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <LinearLayout
                android:id="@+id/trans_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_green_bg"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:padding="5dp">

                <com.alchemistdigital.buxa.utilities.SegoeFontTextView
                    android:id="@+id/enquiry_row_trans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_trans"
                    android:textSize="@dimen/enquiries_date_textSize"
                    app:Segoe="segoe_light"
                    android:textColor="@color/milkyWhite"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cc_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/trans_layout"
                android:background="@drawable/rounded_corner_orange_bg"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:padding="5dp">

                <com.alchemistdigital.buxa.utilities.SegoeFontTextView
                    android:id="@+id/enquiry_row_cc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_cc"
                    android:textSize="@dimen/enquiries_date_textSize"
                    app:Segoe="segoe_light"
                    android:textColor="@color/milkyWhite"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ff_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/cc_layout"
                android:background="@drawable/rounded_corner_sky_bg"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:padding="5dp">

                <com.alchemistdigital.buxa.utilities.SegoeFontTextView
                    android:id="@+id/enquiry_row_ff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_ff"
                    android:textSize="@dimen/enquiries_date_textSize"
                    app:Segoe="segoe_light"
                    android:textColor="@color/milkyWhite"/>
            </LinearLayout>

        </RelativeLayout>

        <com.alchemistdigital.buxa.utilities.SegoeFontTextView
            android:id="@+id/enquiry_row_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/strBookStatus"
            android:textSize="@dimen/enquiries_status_textSize"
            app:Segoe="segoe_regular"
            android:textColor="@color/enquiry_date_color"/>

        <!--<com.alchemistdigital.buxa.utilities.SegoeFontTextView
            android:id="@+id/enquiry_row_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strBookingRates"
            android:textSize="@dimen/enquiries_status_textSize"
            app:Segoe="segoe_regular"
            android:textColor="@color/enquiry_date_color"/>-->

        <com.alchemistdigital.buxa.utilities.SegoeFontTextView
            android:id="@+id/enquiry_row_quotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strBookingQuotation"
            android:textSize="@dimen/enquiries_status_textSize"
            app:Segoe="segoe_regular"
            android:textColor="@color/enquiry_date_color"/>

        <RelativeLayout
            android:id="@+id/conformation_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <com.alchemistdigital.buxa.utilities.SegoeFontTextView
                android:id="@+id/enquiry_row_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strAccept"
                android:textSize="@dimen/enquiries_bookingid_textSize"
                app:Segoe="segoe_regular"
                android:textColor="@color/black_semi_transparent"/>

            <com.alchemistdigital.buxa.utilities.SegoeFontTextView
                android:id="@+id/enquiry_row_backwardSlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/enquiry_row_accept"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="/"
                android:textSize="@dimen/enquiries_bookingid_textSize"
                app:Segoe="segoe_regular"
                android:textColor="@color/black_semi_transparent"/>

            <com.alchemistdigital.buxa.utilities.SegoeFontTextView
                android:id="@+id/enquiry_row_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/enquiry_row_backwardSlash"
                android:text="@string/strCancel"
                android:textSize="@dimen/enquiries_bookingid_textSize"
                app:Segoe="segoe_regular"
                android:textColor="@color/black_semi_transparent"/>
        </RelativeLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>