<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_background"
    android:id="@+id/activity_shipment_area"
    android:fillViewport="true"
    tools:context="com.alchemistdigital.buxa.activities.ShipmentAreaActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/id_tv_strSelectService_shipArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="80dp"
                android:textColor="@color/backgroundColor"
                android:text="@string/strSelectService"
                android:textSize="45sp" />

            <com.alchemistdigital.buxa.utilities.SegoeFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/strWantAvail"
                android:textColor="@color/backgroundColor"
                android:textSize="18dp"
                app:Segoe="segoe_light" />

            <LinearLayout
                android:id="@+id/layoutServiceCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/radioGroupShipmentArea">

                    <RadioButton
                        android:id="@+id/rbInternational"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:text="@string/international"
                        android:paddingLeft="20dp"
                        android:textColor="@color/backgroundColor"
                        android:buttonTint="@color/backgroundColor"
                        android:checked="false"
                        android:textSize="@dimen/OTPtextsize" />

                    <RadioButton
                        android:id="@+id/rbDomestic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/domestic"
                        android:paddingLeft="20dp"
                        android:textColor="@color/backgroundColor"
                        android:buttonTint="@color/backgroundColor"
                        android:checked="false"
                        android:textSize="@dimen/OTPtextsize"/>
                </RadioGroup>

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:clickable="true"
                android:scaleType="fitXY"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:tint="@color/milkyWhite"
                app:rippleColor="@color/milkyWhite"
                android:src="@drawable/ic_keyboard_arrow_right"
                android:onClick="gotoSelectShipmentArea" />

        </LinearLayout>
    </ScrollView>